@@ -6,6 +6,7 @@ Version 1.0.6 (Januari xxth 2013)
 - Fixed: Temp, Hum, TempHumBaro ID
 - option to add a manual LightwaveRF switch
 - Chime light/switch status will now also trigger a notification
+- Web Protection, option to ignore (local) networks
 
 Version 1.0.5 (December 29th 2012)
 - Start of History document
